--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   width: 500px;
   height: 300px;
   background-color: slateblue;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, .3);
 }
 
 img {
