--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   background-color: slateblue;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, .3);
+  min-height: 400px;
 }
 
 img {
