--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, .3);
   min-height: 400px;
+  padding: 40px 20px;
 }
 
 img {
