--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   padding: 40px 20px;
   margin: 5px;
   color: #fff;
+  position: relative;
 }
 
 img {
@@ -24,4 +25,5 @@ img {
   height: 100px;
   border-radius: 50%;
   position: absolute;
+
 }
