--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
 
 .testimonial-container {
   width: 500px;
-  height: 300px;
+  height: 200px;
   background-color: slateblue;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, .3);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   min-height: 400px;
-  padding: 40px 20px;
+  padding: 70px 20px;
   margin: 5px;
   color: #fff;
   position: relative;
